@@ -1,5 +1,7 @@
 2007-04-19  Brian Bidulock  <bidulock@openss7.org>
 
+	* src/modules/sth.c: impl of SNDHOLD and SNDMREAD features
+
 	* include/sys/streams/stropts.h: imp of SNDHOLD and SNDMREAD features
 	* include/sys/streams/strsubr.h: imp of SNDHOLD and SNDMREAD features
 	* src/test/perftest.c: imp of SNDHOLD and SNDMREAD features
